portfolio/src/app/componenets/info/info.component.css
.info-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin-top: 3.2rem;
    padding-top: 1rem;
    z-index: 2;
}

.intro-container {
    height: 15%;
    width: 100%;
}

.intro-text-light {
    font-weight: 400;
    font-size: 2.5rem;
    margin-bottom: -1.5rem;
}

#profile-picture {
    width: 20rem;
    height: 20rem;
}

.contacts {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-top: 1rem;
}

.contact-button:hover {
    background-color: #919191;
}

/* Light Mode */

.name-text-light {
    display: inline-block;
    color: transparent;
    background: linear-gradient(180deg, #000 34.38%, rgba(0, 0, 0, 0.00) 100%);
    background-clip: text;
    font-weight: 700;
    font-size: 4rem;
    margin-bottom: 3rem;
}

.profile-picture-container-light {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    width: 22rem;
    height: 22rem;
    border-radius: 100vh;
    align-self: center;
    margin-top: -1.5rem;
    margin-bottom: 3rem;
}

.contact-button-light {
    cursor: pointer;
    font-size: 1.7rem;
    width: 13rem;
    height: 4rem;
    background-color: #F3F3F3;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    border: none;
    margin-left: 3rem;
}

.contact-button-light:hover {
    background-color: #919191;
}

.contact-button-light:active {
    background-color: #F3F3F3;
}

#email {
    margin-right: 3rem;
}


/* Dark Mode */

.intro-text-dark {
    font-weight: 400;
    font-size: 2.5rem;
    margin-bottom: -1.5rem;
    color: white;
}

.name-text-dark {
    display: inline-block;
    color: transparent;
    background: linear-gradient(180deg, #FFF 51.04%, rgba(0, 0, 0, 0.00) 99.99%, rgba(0, 0, 0, 0.00) 100%);
    background-clip: text;
    font-weight: 700;
    font-size: 4rem;
    margin-bottom: 3rem;
}

.profile-picture-container-dark {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: #222222;
    /*box-shadow: 0px 4px 4px 0px rgba(132, 132, 132, 0.25);*/
    width: 22rem;
    height: 22rem;
    border-radius: 100vh;
    align-self: center;
    margin-top: -1.5rem;
    margin-bottom: 3rem;
}

.contact-button-dark {
    cursor: pointer;
    font-size: 1.7rem;
    width: 13rem;
    height: 4rem;
    background-color: #222222;
    color: white;
    /*box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);*/
    border-radius: 20px;
    border: none;
    margin-left: 3rem;
}

#light-name {
    display: flex;
}

#dark-name {
    display: none;
}

.contact-button-dark:hover {
    background-color: #919191;
}

.contact-button-dark:active {
    background-color: #222222;
}

@media only screen and (max-width: 1350px) and (max-height: 600px) {

    .intro-text-light {
        font-size: 2rem;
    }
    .intro-text-dark {
        font-size: 2rem;
    }

    .name-text-light {
        font-size: 3rem;
        margin-bottom: 2rem;
    }
    .name-text-dark {
        font-size: 3rem;
        margin-bottom: 2rem;
    }

    .profile-picture-container-light {
        width: 18rem;
        height: 18rem;
        margin-bottom: 1rem;
    }
    .profile-picture-container-dark {
        width: 18rem;
        height: 18rem;
        margin-bottom: 1rem;
    }
    #profile-picture {
        width: 16rem;
        height: 16rem;
    }

    .contact-button-light {
        width: 11rem;
        height: 3.5rem;
        font-size: 1.3rem;
    }
    .contact-button-dark {
        width: 11rem;
        height: 3.5rem;
        font-size: 1.3rem;
    }

}

@media only screen and (max-width: 800px) {
    .contacts {
        flex-direction: column;
    }
    #resume {
        margin-right: 3rem;
    }
    #github {
        margin-right: 3rem;
    }
    #linkedin {
        margin-right: 3rem;
    }
    #email {
        margin-right: 3rem;
    }

    .intro-text-light {
        font-size: 1.5rem;
    }
    .intro-text-dark {
        font-size: 1.5rem;
    }

    .name-text-light {
        font-size: 2.5rem;
        margin-bottom: 2rem;
    }
    .name-text-dark {
        font-size: 2.5rem;
        margin-bottom: 2rem;
    }

    .profile-picture-container-light {
        width: 12rem;
        height: 12rem;
        margin-bottom: 1rem;
    }
    .profile-picture-container-dark {
        width: 18rem;
        height: 18rem;
        margin-bottom: 1rem;
    }
    #profile-picture {
        width: 10rem;
        height: 10rem;
    }

    .contact-button-light {
        width: 9rem;
        height: 2.86rem;
        font-size: 1.2rem;
        margin-bottom: 2rem;
    }
    .contact-button-dark {
        width: 9rem;
        height: 2.86rem;
        font-size: 1.2rem;
    }
    #email {
        margin-bottom: 0rem;
    }

}

@media only screen and (max-width: 400px) {
    .info-container {
        padding-top: 2rem;
    }

    .contacts {
        flex-direction: column;
    }
    #resume {
        margin-right: 3rem;
    }
    #github {
        margin-right: 3rem;
    }
    #linkedin {
        margin-right: 3rem;
    }
    #email {
        margin-right: 3rem;
        margin-bottom: 0rem;
    }

    .intro-text-light {
        font-size: 1rem;
    }
    .intro-text-dark {
        font-size: 1rem;
    }

    .name-text-light {
        font-size: 2rem;
        margin-bottom: 2rem;
    }
    .name-text-dark {
        font-size: 2rem;
        margin-bottom: 2rem;
    }

    .profile-picture-container-light {
        width: 9rem;
        height: 9rem;
        margin-bottom: 1rem;
    }
    .profile-picture-container-dark {
        width: 9rem;
        height: 9rem;
        margin-bottom: 1rem;
    }
    #profile-picture {
        width: 7rem;
        height: 7rem;
    }

    .contact-button-light {
        width: 8rem;
        height: 2.54rem;
        font-size: 1rem;
        margin-bottom: 2rem;
    }
    .contact-button-dark {
        width: 8rem;
        height: 2.54rem;
        font-size: 1rem;
    }

}

@media only screen and (max-width: 310px) {
    .name-text-light {
        font-size: 1.8rem;
        margin-bottom: 2rem;
    }
    .name-text-dark {
        font-size: 1.8rem;
        margin-bottom: 2rem;
    }
}

